[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/entities/critter.gd" type="Script" id=1]
[ext_resource path="res://src/states/state_machine.gd" type="Script" id=2]
[ext_resource path="res://src/states/critter/end_turn.gd" type="Script" id=4]
[ext_resource path="res://src/states/critter/wander.gd" type="Script" id=5]
[ext_resource path="res://src/states/critter/begin_turn.gd" type="Script" id=6]
[ext_resource path="res://src/states/critter/eat.gd" type="Script" id=7]
[ext_resource path="res://src/states/critter/die.gd" type="Script" id=8]
[ext_resource path="res://scenes/entities/critter_model.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/entities/resource_critter.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/states/critter/calculate_path.gd" type="Script" id=11]

[node name="critter" type="Spatial" groups=[
"nature",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0 )
script = ExtResource( 1 )
resource_critter_scene = ExtResource( 10 )
tween = NodePath("Tween")
state_machine = NodePath("state_machine")
critter_model = NodePath("critter_model")
max_age = 24

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 2 )
autostart = false

[node name="begin_turn" type="Node" parent="state_machine"]
script = ExtResource( 6 )

[node name="wander" type="Node" parent="state_machine"]
script = ExtResource( 5 )

[node name="calculate_path" type="Node" parent="state_machine"]
script = ExtResource( 11 )

[node name="eat" type="Node" parent="state_machine"]
script = ExtResource( 7 )

[node name="die" type="Node" parent="state_machine"]
script = ExtResource( 8 )

[node name="end_turn" type="Node" parent="state_machine"]
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="critter_model" parent="." instance=ExtResource( 9 )]

[editable path="critter_model"]
